[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-journal"
version = "0.1.1"
description = "Lightweight CLI for durable agent memory journaling, recall, and review"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Miso Lith" }
]
keywords = ["memory", "agent", "cli", "journal", "recall"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console"
]

[project.scripts]
agent-memory-journal = "agent_memory_journal:main"

[tool.setuptools]
py-modules = ["agent_memory_journal"]
packages = ["agent_memory"]
